--- a/GOES-R_imageFD.ipynb
+++ b/GOES-R_imageFD.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surprising-liberal",
+   "id": "verified-financing",
    "metadata": {},
    "source": [
     "## Functions for unfiltered cloud mask"
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "radical-aircraft",
+   "id": "choice-guyana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conventional-jurisdiction",
+   "id": "jewish-producer",
    "metadata": {},
    "source": [
     "# Execution"
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "divine-marketplace",
+   "id": "prescribed-banks",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "prostate-smith",
+   "id": "weird-virginia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,41 +259,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "abandoned-prevention",
+   "execution_count": 32,
+   "id": "celtic-hearts",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'raw.gitlab.com/-/ide/project/adomakor412/goes-r_fd_image/tree/master/-/artifacts.csv/'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-c8f9b7d159dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#data = pd.read_csv('https://raw.githubusercontent.com/adomakor412/GOEScode/master/G17series.csv'\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#,error_bad_lines=False)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'raw.'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mCSV_URL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/adomako/lib/python3.9/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[1;32m    603\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwds_defaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    604\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 605\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    606\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    607\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/adomako/lib/python3.9/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    455\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    456\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 457\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    458\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    459\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/adomako/lib/python3.9/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    812\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"has_index_names\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"has_index_names\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    813\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 814\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    815\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    816\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/adomako/lib/python3.9/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, engine)\u001b[0m\n\u001b[1;32m   1043\u001b[0m             )\n\u001b[1;32m   1044\u001b[0m         \u001b[0;31m# error: Too many arguments for \"ParserBase\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1045\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mmapping\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[call-arg]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1046\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1047\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_failover_to_python\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/adomako/lib/python3.9/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, src, **kwds)\u001b[0m\n\u001b[1;32m   1860\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1861\u001b[0m         \u001b[0;31m# open handles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1862\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_open_handles\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1863\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandles\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1864\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"storage_options\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"encoding\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"memory_map\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"compression\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/adomako/lib/python3.9/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_open_handles\u001b[0;34m(self, src, kwds)\u001b[0m\n\u001b[1;32m   1355\u001b[0m         \u001b[0mLet\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mreaders\u001b[0m \u001b[0mopen\u001b[0m \u001b[0mIOHanldes\u001b[0m \u001b[0mafter\u001b[0m \u001b[0mthey\u001b[0m \u001b[0mare\u001b[0m \u001b[0mdone\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mtheir\u001b[0m \u001b[0mpotential\u001b[0m \u001b[0mraises\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1356\u001b[0m         \"\"\"\n\u001b[0;32m-> 1357\u001b[0;31m         self.handles = get_handle(\n\u001b[0m\u001b[1;32m   1358\u001b[0m             \u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1359\u001b[0m             \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/adomako/lib/python3.9/site-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    640\u001b[0m                 \u001b[0merrors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"replace\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    641\u001b[0m             \u001b[0;31m# Encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 642\u001b[0;31m             handle = open(\n\u001b[0m\u001b[1;32m    643\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    644\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'raw.gitlab.com/-/ide/project/adomakor412/goes-r_fd_image/tree/master/-/artifacts.csv/'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Satellite</th>\n",
+       "      <th>Day (human)</th>\n",
+       "      <th>Day (ordinal)</th>\n",
+       "      <th>Start Time (UTC)</th>\n",
+       "      <th>Band(s)</th>\n",
+       "      <th>Main Artifact</th>\n",
+       "      <th>2nd Artifact</th>\n",
+       "      <th>Comments</th>\n",
+       "      <th>Lat/Lon</th>\n",
+       "      <th>Line/Element</th>\n",
+       "      <th>16-panel Imagery Link</th>\n",
+       "      <th>Level-1b Path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GOES-17</td>\n",
+       "      <td>12/14/2019</td>\n",
+       "      <td>2019348</td>\n",
+       "      <td>07:10:34</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Sharkfin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>FD</td>\n",
+       "      <td>24S,165W</td>\n",
+       "      <td>3955,1398</td>\n",
+       "      <td>http://data.ssec.wisc.edu/abi/imagery/GOES-17/...</td>\n",
+       "      <td>/arcdata/goes/grb/goes17/2019/2019_12_14_348/a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GOES-17</td>\n",
+       "      <td>12/14/2019</td>\n",
+       "      <td>2019348</td>\n",
+       "      <td>08:20:33</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Sharkfin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>FD</td>\n",
+       "      <td>28N,165W</td>\n",
+       "      <td>1285,1446</td>\n",
+       "      <td>http://data.ssec.wisc.edu/abi/imagery/GOES-17/...</td>\n",
+       "      <td>/arcdata/goes/grb/goes17/2019/2019_12_14_348/a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GOES-17</td>\n",
+       "      <td>12/15/2019</td>\n",
+       "      <td>2019349</td>\n",
+       "      <td>16:50:34</td>\n",
+       "      <td>6,7,10,11</td>\n",
+       "      <td>Sharkfin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>FD</td>\n",
+       "      <td>48S,165W</td>\n",
+       "      <td>4897,1788</td>\n",
+       "      <td>http://data.ssec.wisc.edu/abi/imagery/GOES-17/...</td>\n",
+       "      <td>/arcdata/goes/grb/goes17/2019/2019_12_15_349/a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GOES-17</td>\n",
+       "      <td>12/15/2019</td>\n",
+       "      <td>2019349</td>\n",
+       "      <td>18:50:34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Sharkfin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>FD</td>\n",
+       "      <td>35S,180W</td>\n",
+       "      <td>4399,1062</td>\n",
+       "      <td>http://data.ssec.wisc.edu/abi/imagery/GOES-17/...</td>\n",
+       "      <td>/arcdata/goes/grb/goes17/2019/2019_12_15_349/a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GOES-17</td>\n",
+       "      <td>12/16/2019</td>\n",
+       "      <td>2019350</td>\n",
+       "      <td>04:30:34</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Sharkfin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>FD</td>\n",
+       "      <td>15S,170W</td>\n",
+       "      <td>3505,1098</td>\n",
+       "      <td>http://data.ssec.wisc.edu/abi/imagery/GOES-17/...</td>\n",
+       "      <td>/arcdata/goes/grb/goes17/2019/2019_12_16_350/a...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Satellite Day (human)  Day (ordinal) Start Time (UTC)    Band(s)  \\\n",
+       "0   GOES-17  12/14/2019        2019348         07:10:34         11   \n",
+       "1   GOES-17  12/14/2019        2019348         08:20:33         15   \n",
+       "2   GOES-17  12/15/2019        2019349         16:50:34  6,7,10,11   \n",
+       "3   GOES-17  12/15/2019        2019349         18:50:34          1   \n",
+       "4   GOES-17  12/16/2019        2019350         04:30:34          6   \n",
+       "\n",
+       "  Main Artifact  2nd Artifact Comments   Lat/Lon Line/Element  \\\n",
+       "0      Sharkfin           NaN       FD  24S,165W    3955,1398   \n",
+       "1      Sharkfin           NaN       FD  28N,165W    1285,1446   \n",
+       "2      Sharkfin           NaN       FD  48S,165W    4897,1788   \n",
+       "3      Sharkfin           NaN       FD  35S,180W    4399,1062   \n",
+       "4      Sharkfin           NaN       FD  15S,170W    3505,1098   \n",
+       "\n",
+       "                               16-panel Imagery Link  \\\n",
+       "0  http://data.ssec.wisc.edu/abi/imagery/GOES-17/...   \n",
+       "1  http://data.ssec.wisc.edu/abi/imagery/GOES-17/...   \n",
+       "2  http://data.ssec.wisc.edu/abi/imagery/GOES-17/...   \n",
+       "3  http://data.ssec.wisc.edu/abi/imagery/GOES-17/...   \n",
+       "4  http://data.ssec.wisc.edu/abi/imagery/GOES-17/...   \n",
+       "\n",
+       "                                       Level-1b Path  \n",
+       "0  /arcdata/goes/grb/goes17/2019/2019_12_14_348/a...  \n",
+       "1  /arcdata/goes/grb/goes17/2019/2019_12_14_348/a...  \n",
+       "2  /arcdata/goes/grb/goes17/2019/2019_12_15_349/a...  \n",
+       "3  /arcdata/goes/grb/goes17/2019/2019_12_15_349/a...  \n",
+       "4  /arcdata/goes/grb/goes17/2019/2019_12_16_350/a...  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "CSV_URL = 'gitlab.com/-/ide/project/adomakor412/goes-r_fd_image/tree/master/-/artifacts.csv/'\n",
+    "CSV_URL = 'https://raw.githubusercontent.com/adomakor412/NERTO_CIMSS_GOES-R/master/artifacts.csv'\n",
     "#data = pd.read_csv('https://raw.githubusercontent.com/adomakor412/GOEScode/master/G17series.csv'\\\n",
     "#,error_bad_lines=False)\n",
-    "data = pd.read_csv('raw.'+CSV_URL)\n",
+    "data = pd.read_csv(CSV_URL)\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "appropriate-ultimate",
+   "id": "wooden-pavilion",
    "metadata": {},
    "outputs": [],
    "source": [
